--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.7",
     "tailwindcss": "^3.0.23"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
